--- a/app/src/main/res/layout/activity_update_data_obat.xml
+++ b/app/src/main/res/layout/activity_update_data_obat.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="vertical"
-    tools:context=".InputObat">
+    tools:context=".UpdateDataObat">
 
     <TextView
-        android:id="@+id/input_obat"
+        android:id="@+id/update_obat"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:gravity="top"
-        android:text="Input Data Obat"
+        android:text="Update Data Obat"
         android:textAppearance="@style/text"
         android:textStyle="bold" />
 
@@ -27,7 +27,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/nomor_obat"
+        android:id="@+id/nomorobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -42,7 +42,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/nama_obat"
+        android:id="@+id/namaobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -57,7 +57,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/jenis_obat"
+        android:id="@+id/jenisobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -72,7 +72,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/stok_obat"
+        android:id="@+id/stokobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="top"
@@ -84,12 +84,12 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textStyle="bold"
-        android:id="@+id/btnSave"
+        android:id="@+id/btnUpdate"
         android:textSize="20dp"
         android:background="@color/blue"
         android:textColor="@android:color/background_light"
         android:layout_alignParentBottom="true"
-        android:text="SAVE"
+        android:text="UPDATE"
         />
 
 
