--- a/app/src/main/res/layout/activity_reminder.xml
+++ b/app/src/main/res/layout/activity_reminder.xml
@@ -21,6 +21,14 @@
         android:gravity="center_horizontal|top"
         android:textStyle="bold"/>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id= "@+id/rv_pengingat"
+        tools:listitem="@layout/format_tampilan_reminder"
+        android:layout_below="@id/pengingat"
+        android:layout_marginTop="10dp"/>
+
     <ImageView
         android:id="@+id/plus"
         android:layout_width="76dp"
