--- a/app/src/main/res/layout/activity_update_data_reminder.xml
+++ b/app/src/main/res/layout/activity_update_data_reminder.xml
@@ -6,15 +6,15 @@
     android:layout_height="match_parent"
     android:padding="30dp"
     android:orientation="vertical"
-    tools:context=".InputReminder">
+    tools:context=".UpdateDataReminder">
 
     <TextView
-        android:id="@+id/input_reminder"
+        android:id="@+id/update_reminder"
         android:layout_width="wrap_content"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:gravity="top"
-        android:text="Input Alarm Obat"
+        android:text="Update Alarm Obat"
         android:textAppearance="@style/text"
         android:textStyle="bold" />
 
@@ -27,7 +27,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/nomor_obat"
+        android:id="@+id/nomorobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -43,7 +43,7 @@
         android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/nama_obat"
+        android:id="@+id/namaobat"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
@@ -69,11 +69,11 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:textStyle="bold"
-        android:id="@+id/buttonSave"
+        android:id="@+id/btnUpdate"
         android:textSize="20dp"
         android:background="@drawable/color_btn"
         android:textColor="@android:color/background_light"
         android:layout_alignParentBottom="true"
-        android:text="SAVE" />
+        android:text="UPDATE" />
 
 </LinearLayout>
