--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -24,7 +24,8 @@
         android:layout_height="39dp"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="71dp"
+        android:layout_gravity="center"
+        android:layout_marginLeft="76dp"
         android:layout_marginTop="458dp"
         android:gravity="top"
         android:text="@string/my_medicine"
